2005-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override: Allow None to be passed in to:
	set_group for RadioAction.set_group(), RadioToolButton.set_group()
	and RadioMenuItem.set_group(). Fixes #170514
	
	* tests/test_radiobutton.py: Refactor and add unittests for
	RadioAction, RadioToolButton and RadioMenuItem. 

2005-05-09  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #303573 - "exceptions raised in a child watch
	handler are silently swallowed"

	* gobject/gobjectmodule.c:
	(child_watch_func),
	(_pyg_spawn_async_callback): if PyObject_CallFunction()
	returns NULL, print a traceback of the exception.
	
	* tests/test_mainloop.py: add testcase.
	
	* tests/Makefile.am: add test_mainloop.py

	Reviewed by Johan Dahlin <johan@gnome.org>

2005-05-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr): Fix setter for
	"window" attribute: don't unblock threads around g_bject_ref;
	g_object_unref previous event.window.  Fixes #302622.

	* tests/Makefile.am (tests): Add test_gdkevent.py.
	
	* tests/test_gdkevent.py: Add a test for gtk.gdk.Event.window setter.

2005-04-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/runtests.py (program): Fix indentation and a "name
	'program' is not defined" exception.

	* codegen/argtypes.py: Treat guint and gsize as python longs, with
	appropriate parameter conversion formats and return conversion
	functions.  Also treat gssize as long long on LLP64 architectures
	 (thanks jamesh).  Correctly parse "long" parameters on LP64
	architectures. Fixes #300012: "Handling of guint, gsize, gssize,
	and glong in pygtk is broken".

2005-03-27  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_dialog_set_alternative_button_order):
	Really check in the code. Fixes #171771 (Manish Singh)

2005-03-20  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_insert):
	Regression, allow the second argument to be unspecified, fixes