@@ -1,5 +1,8 @@
 2005-05-09  Johan Dahlin  <jdahlin@async.com.br>
 
+	* gobject/pygenum.c (pyg_enum_new): Complain if ret is NULL, 
+	Fixes #303524.
+
 	* gtk/gtk.override: Allow None to be passed in to:
 	set_group for RadioAction.set_group(), RadioToolButton.set_group()
 	and RadioMenuItem.set_group(). Fixes #170514
